--- a/Meridix.ApiClientCli/packages.config
+++ b/Meridix.ApiClientCli/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net462" />
+  <package id="ILMerge" version="2.13.0307" targetFramework="net462" />
   <package id="MeridixStudioWebAPI" version="0.3.64" targetFramework="net462" />
+  <package id="MSBuild.ILMerge.Task" version="1.0.5" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="System.Collections" version="4.0.11-rc2-24027" targetFramework="net462" />
   <package id="System.Console" version="4.0.0-rc2-24027" targetFramework="net462" />
